--- a/ngdaos.html
+++ b/ngdaos.html
@@ -1,10 +1,11 @@
----
-layout: page
+a---
+layout: default
 title: ngDAOs
 ---
 {% for ngDAO in site.ngdaos %}
   <div class="ngdao">
     <h2>{{ ngDAO.nombre }}</a></h2>
+    <h3>{{ ngDAO.descripcion }}</a></h2>
     {{ ngDAO.content }}
   </div>
 {% endfor %}
