--- a/ngdaos.html
+++ b/ngdaos.html
@@ -3,6 +3,9 @@ theme: jekyll-theme-cayman
 layout: default
 title: ngDAOs
 ---
+<h1>Listado de ngDAOs</h1>
+Daos adscritas al proyecto de ayuda ngDAO
+
 {% for ngDAO in site.ngdaos %}
   <div class="ngdao">
     <h2><a href="{{ ngDAO.web }}">{{ ngDAO.nombre }}</a></h2>
