--- a/ngdaos.html
+++ b/ngdaos.html
@@ -4,7 +4,7 @@ layout: default
 title: ngDAOs
 ---
 <h1>Listado de ngDAOs</h1>
-Daos adscritas al proyecto de ayuda ngDAO
+DAOs adscritas al proyecto de ayuda ngDAO
 <hr/>
 {% for ngDAO in site.ngdaos %}
   <div class="ngdao">
