--- a/Consultoría.html
+++ b/Consultoría.html
@@ -1,4 +1,4 @@
-# Cree una ngDAO o convierta su ONG en una ngDAO
+<h1>Cree una ngDAO o convierta su ONG en una ngDAO</h1>
 
-## Contacte con nosotros
+<h2>Contacte con nosotros<h2
 Ignacio Baixauli +34 661272829
