--- a/consultoria.html
+++ b/consultoria.html
@@ -1,4 +1,8 @@
+---
+theme: jekyll-theme-cayman
+layout: default
+title: Consultoría
+---
 <h1>Cree una ngDAO o convierta su ONG en una ngDAO</h1>
-
 <h2>Contacte con nosotros<h2
 Ignacio Baixauli +34 661272829
