--- a/consultoria.html
+++ b/consultoria.html
@@ -4,5 +4,5 @@ layout: default
 title: Consultoría
 ---
 <h1>Cree una ngDAO o convierta su ONG en una ngDAO</h1>
-<h2>Contacte con nosotros<h2
+<h2>Contacte con nosotros<h2>
 Ignacio Baixauli +34 661272829
