--- a/consultoria.html
+++ b/consultoria.html
@@ -3,6 +3,14 @@ theme: jekyll-theme-cayman
 layout: default
 title: Consultoría
 ---
+<img src="/assets/images/ngDAOlogo9.png" class="logo" alt="ngDAO logo">
+<link rel="stylesheet" href="/assets/css/styles.css">
+<div class="scrollmenu">
+  <a href="/ngdaos.html">Listado de ngDAOs</a>
+  <a href="/consultoria.html">Consultoría</a>
+  <a href="https://github.com/NGDAOorg/ngdao/wiki">Wiki</a>
+  <a href="https://github.com/NGDAOorg/ngdao/discussions">Debate</a>
+</div>
 <h1>Cree una ngDAO o convierta su ONG en una ngDAO</h1>
 <h2>Contacte con nosotros<h2>
 Ignacio Baixauli +34 661272829
