--- a/ngdaos.html
+++ b/ngdaos.html
@@ -1,9 +1,8 @@
 ---
 theme: jekyll-theme-cayman
 layout: default
-title: ngDAOs
+title: Listado de ngDAOs
 ---
-<img src="/assets/images/ngDAOlogo9.png" class="logo" alt="ngDAO logo">
 <link rel="stylesheet" href="/assets/css/styles.css">
 <div class="scrollmenu">
   <a href="/ngdaos.html">Listado de ngDAOs</a>
