--- a/consultoria.html
+++ b/consultoria.html
@@ -3,7 +3,6 @@ theme: jekyll-theme-cayman
 layout: default
 title: Consultoría
 ---
-<img src="/assets/images/ngDAOlogo9.png" class="logo" alt="ngDAO logo">
 <link rel="stylesheet" href="/assets/css/styles.css">
 <div class="scrollmenu">
   <a href="/ngdaos.html">Listado de ngDAOs</a>
@@ -14,3 +13,4 @@ title: Consultoría
 <h1>Cree una ngDAO o convierta su ONG en una ngDAO</h1>
 <h2>Contacte con nosotros<h2>
 Ignacio Baixauli +34 661272829
+ignaciobaixauli@ignaciobaixauli.com
