--- a/consultoria.html
+++ b/consultoria.html
@@ -9,6 +9,7 @@ title: Consultoría
   <a href="/consultoria.html">Consultoría</a>
   <a href="https://github.com/NGDAOorg/ngdao/wiki">Wiki</a>
   <a href="https://github.com/NGDAOorg/ngdao/discussions">Debate</a>
+  <a href="/blog.html">Blog</a>
 </div>
 <h1>Cree una ngDAO o convierta su ONG en una ngDAO</h1>
 <h2>Contacte con nosotros<h2>
