--- a/ngdaos.html
+++ b/ngdaos.html
@@ -9,6 +9,7 @@ title: Listado de ngDAOs
   <a href="/consultoria.html">Consultoría</a>
   <a href="https://github.com/NGDAOorg/ngdao/wiki">Wiki</a>
   <a href="https://github.com/NGDAOorg/ngdao/discussions">Debate</a>
+  <a href="/blog.html">Blog</a>
 </div>
 <h1>Listado de ngDAOs</h1>
 DAOs adscritas al proyecto de ayuda ngDAO
