--- a/consultoria.html
+++ b/consultoria.html
@@ -5,6 +5,7 @@ title: Consultoría
 ---
 <link rel="stylesheet" href="/assets/css/styles.css">
 <div class="scrollmenu">
+  <a href="/">Inicio</a>
   <a href="/ngdaos.html">Listado de ngDAOs</a>
   <a href="/consultoria.html">Consultoría</a>
   <a href="https://github.com/NGDAOorg/ngdao/wiki">Wiki</a>
