--- a/consultoria.html
+++ b/consultoria.html
@@ -7,6 +7,7 @@ title: Consultoría
 <div class="scrollmenu">
   <a href="/">Inicio</a>
   <a href="/ngdaos.html">Listado de ngDAOs</a>
+  <a href="https://daos.academy">Formación</a>
   <a href="/consultoria.html">Consultoría</a>
   <a href="https://github.com/NGDAOorg/ngdao/wiki">Wiki</a>
   <a href="https://github.com/NGDAOorg/ngdao/discussions">Debate</a>
