--- a/ngdaos.html
+++ b/ngdaos.html
@@ -19,6 +19,8 @@ DAOs adscritas al proyecto de ayuda ngDAO
   <div class="ngdao">
     <h2><a href="{{ ngDAO.web }}">{{ ngDAO.nombre }}</a></h2>
     <h3>{{ ngDAO.descripcion }}</a></h2>
-    {{ ngDAO.content }}
+    Puedes <b>donar fondos</b> a la dirección: {{ ngDAO.send_founds_to }} en la blockchain {{ ngDAO.blockchain }}
+    Puedes <b>acceder a la DAO</b> en {{ ngDAO.framwork }} en el nombre de DAO {{ ngDAO.DAO_name }} en la blockchain {{ ngDAO.blockchain }}
+    <div>{{ ngDAO.content }}</div>
   </div>
 {% endfor %}
