--- a/ngdaos.html
+++ b/ngdaos.html
@@ -6,6 +6,7 @@ title: Listado de ngDAOs
 <link rel="stylesheet" href="/assets/css/styles.css">
 <div class="scrollmenu">
   <a href="/ngdaos.html">Listado de ngDAOs</a>
+  <a href="/colaborar.html">Colaborar</a>
   <a href="https://daos.academy">Formación</a>
   <a href="/consultoria.html">Consultoría</a>
   <a href="https://github.com/NGDAOorg/ngdao/wiki">Wiki</a>
