--- a/colaborar.html
+++ b/colaborar.html
@@ -1,7 +1,8 @@
 ---
 theme: jekyll-theme-cayman
 layout: default
-title: Consultoría
+title: Colabora con nosotros
+description: Colabora directamente con ngDAO o con cualquier de nuestras ngDAOs ya existentes, o bien propón una nueva
 ---
 <link rel="stylesheet" href="/assets/css/styles.css">
 <div class="scrollmenu">
