--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@ title: El Blog de ngDAO
 <div class="scrollmenu">
   <a href="/">Inicio</a>
   <a href="/ngdaos.html">Listado de ngDAOs</a>
-  <a href="/colabora.html">Colaborar</a>
+  <a href="/colaborar.html">Colaborar</a>
   <a href="/consultoria.html">Consultoría</a>
   <a href="https://github.com/NGDAOorg/ngdao/wiki">Wiki</a>
   <a href="https://github.com/NGDAOorg/ngdao/discussions">Debate</a>
