--- a/consultoria.html
+++ b/consultoria.html
@@ -8,7 +8,8 @@ title: Consultoría
   <a href="/">Inicio</a>
   <a href="/ngdaos.html">Listado de ngDAOs</a>
   <a href="https://daos.academy">Formación</a>
-  <a href="/consultoria.html">Consultoría</a>
+  <a href="/colaborar.html">Colaborar</a>
+   <a href="/consultoria.html">Consultoría</a>
   <a href="https://github.com/NGDAOorg/ngdao/wiki">Wiki</a>
   <a href="https://github.com/NGDAOorg/ngdao/discussions">Debate</a>
   <a href="/blog.html">Blog</a>
