--- a/ngdaos.html
+++ b/ngdaos.html
@@ -23,6 +23,7 @@ DAOs adscritas al proyecto de ayuda ngDAO
     <p>Puedes <b>donar fondos</b> a la dirección <b>{{ ngDAO.send_founds_to }}</b> en la blockchain <b>{{ ngDAO.blockchain }}</b>}</p>
     <p>Puedes <b>acceder a la DAO</b> en <b>{{ ngDAO.framwork }}</b>, con el nombre de DAO <b>{{ ngDAO.DAO_name }}</b>, en la blockchain de <b>{{ ngDAO.blockchain }}</b></p>
     <p>Puedes <b>colaborar con {{ ngDAO.nombre }} <a href="/colaborar.html">rellenando este formulario</a></b></p>
+    <p>Participa en <a href="{{ ngDAO.telegram }}">nuestro grupo de Telegram</a>
     <div>{{ ngDAO.content }}</div>
   </div>
 {% endfor %}
