--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@ theme: jekyll-theme-cayman
 layout: default
 title: El Blog de ngDAO
 ---
+{% include head.html %}
 <link rel="stylesheet" href="/assets/css/styles.css">
 <div class="scrollmenu">
   <a href="/">Inicio</a>
