--- a/colaborar.html
+++ b/colaborar.html
@@ -4,6 +4,7 @@ layout: default
 title: Colabora con nosotros
 description: Colabora directamente con ngDAO o con cualquier de nuestras ngDAOs ya existentes, o bien propón una nueva
 ---
+{% include head.html %}
 <link rel="stylesheet" href="/assets/css/styles.css">
 <div class="scrollmenu">
   <a href="/">Inicio</a>
