--- a/ngdaos.html
+++ b/ngdaos.html
@@ -3,6 +3,7 @@ theme: jekyll-theme-cayman
 layout: default
 title: Listado de ngDAOs
 ---
+{% include head.html %}
 <link rel="stylesheet" href="/assets/css/styles.css">
 <div class="scrollmenu">
   <a href="/ngdaos.html">Listado de ngDAOs</a>
