--- a/consultoria.html
+++ b/consultoria.html
@@ -1,21 +1,8 @@
 ---
-theme: jekyll-theme-cayman
 layout: default
-title: Consultoría
+title: Consultoría y formación
+description: Formese con nosotros sobre DAOs o pídanos consejo sobre como crear y gestionar una ngDAO.
 ---
-{% include head.html %}
-<link rel="stylesheet" href="/assets/css/styles.css">
-<div class="scrollmenu">
-  <a href="/">Inicio</a>
-  <a href="/ngdaos.html">Listado de ngDAOs</a>
-  <a href="https://daos.academy">Formación</a>
-  <a href="/colaborar.html">Colaborar</a>
-   <a href="/consultoria.html">Consultoría</a>
-  <a href="https://github.com/NGDAOorg/ngdao/wiki">Wiki</a>
-  <a href="https://github.com/NGDAOorg/ngdao/discussions">Debate</a>
-  <a href="/blog.html">Blog</a>
-</div>
-<h1>Cree una ngDAO o convierta su ONG en una ngDAO</h1>
 <h2>Contacte con nosotros<h2>
 Ignacio Baixauli +34 661272829
 ignaciobaixauli@ignaciobaixauli.com
