--- a/ngdaos.html
+++ b/ngdaos.html
@@ -1,7 +1,8 @@
 ---
 theme: jekyll-theme-cayman
 layout: default
-title: Listado de ngDAOs - DAOs adscritas al proyecto de ayuda ngDAO
+title: Listado de ngDAOs
+description: DAOs adscritas al proyecto de ayuda ngDAO
 ---
 {% for ngDAO in site.ngdaos %}
   <div class="ngdao">
