--- a/consultoria.html
+++ b/consultoria.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Consultoría y formación
-description: Formese con nosotros sobre DAOs o pídanos consejo sobre como crear y gestionar una ngDAO.
+title: Consultoría
+description: Le ayudamos a crear y gestionar una ngDAO.
 ---
 <h2>Contacte con nosotros<h2>
 Ignacio Baixauli +34 661272829
