--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 ---
 layout: default
+title: ngDAO
+description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizadas) sin ánimo de lucro o ngDAOs
 ---
 
-# ngDAO
+<h4>Porque otra forma de gestionar fondos y hacer llegar las ayudas a gente necesitada es posible</h4>
+<h4>Todo gracias a las Organizaciones Autónomas Descentralizadas y la Blockchain</h4>
+<h4>El término ngDAO viene de "non-governmental Decentalized Autonomous Organization" a diferencia del término NGO "Non-Governmental Organization"</h4>
 
-## DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizadas) sin ánimo de lucro o ngDAOs
+<hr>
 
-### Porque otra forma de gestionar fondos y hacer llegar las ayudas a gente necesitada es posible
-#### Todo gracias a las Organizaciones Autónomas Descentralizadas y la Blockchain
-#### El término ngDAO viene de "non-governmental Decentalized Autonomous Organization" a diferencia del término NGO "Non-Governmental Organization"
-
--------------------
-
-## 100% Transparente
+<h2>100% Transparente</h2>
 
 **Cualquier persona**, de dentro y fuera de la ngDAO, **puede saber cuantos fondos tiene la DAO y como los distribuye.**
 
-## Corrupción CERO
+<h2>Corrupción CERO</h2>
 
 * **La transparencia es** siempre **el mejor antídoto contra la corrupción**, y una ngDAO es 100% transparente.
 * **Los bienes** de una ngDAO **son inconfiscables** por ningún estado o gobierno.
@@ -24,33 +22,33 @@ layout: default
 * **No hay intermediarios** entre el donante -> ngDAO -> beneficiario.
 * **Los estatutos de una ngDAO** (un contrato inteligente en una Blockchain) **son transparentes e inamobibles** de por vida.
 
-## Gestión democrática
+<h2>Gestión democrática</h2>
 
 * **Ningún fondo es transferido sin haber pasado una votación previa.**
 * **El token** (participaciones) **de la ngDAO hace de token de gobernanza** y otorga poder de voto.
 
-### Promotores
+<h3>Promotores/h3>
 
 **Los promotores de la ngDAO son los primeros en obtener tokens** de gobernanza que poco a poco se irán diluyendo entre los tokens de los donantes y los de los beneficiarios
 
-### Donantes
+<h3>Donantes/h3>
 
 * **Los donantes tienen derecho a tokens** de la ngDAO y por tanto a decidir que se hace con los fondos de la ngDAO.
 * **Cada ngDAO decide** entre sus miembros **como repartir nuevos tokens** entre los donantes de fondos.
 
-### Beneficiarios
+<h3>Beneficiarios/h3>
 
 * **Los beneficiarios reciben tokens en función** de la decisión de donantes y promotores, pero la idea es que cuando estos consideren que los beneficiarios han adquirido conocimientos para la gestión de la ngDAO y comprenden la economía del token, la masa de tokens en manos de beneficiarios sea superior al 51% de la que poseen promotores y donantes hasta que esta última pase a ser anecdótica.
 
-## Ayudas directas sin intermediarios
+<h2>Ayudas directas sin intermediarios</h2>
 
 **Las ayudas llegan directamente a la ngDAO,** sin intermediarios y de forma íntegra.
 
  ![Cómo funciona una ngDAO](/assets/images/Como funciona una ngDAO.png)
 
-## Economía DUAL y autónoma
+<h2>Economía DUAL y autónoma</h2>
 
-### Fondos en criptomonedas
+<h3>Fondos en criptomonedas/h3>
   
   Al tratarse de un sistema basado en Blockchain, **los fondos se recaudan en criptomonedas.**
   
@@ -58,7 +56,7 @@ layout: default
   
   **Los propietarios de tokens de la ngDAO son los encargados de decidir dónde van destinados los fondos** de la ngDAO mediante votación democrática.
   
-### Economía del token
+<h3>Economía del token</h3>
   
   * Haya o no haya fondos suficientes para ayudar a los beneficiarios, **es posible crear** desde el prier día, **una economía basada en el token** que atesoran los beneficiarios y que la ngDAO les puede ir suminstrando hasta el día en que ellos dispongan de la mayoría de los tokens.
   * Los tokens pueden crear **una economía basada en tokens de fidelización y** descuento y a medida que se genere confianza, **convertirse incluso en moneda local** si se diera el caso.
@@ -67,7 +65,7 @@ layout: default
   
   * **El token puede formar parte fácilmente de pools de liquidez** en casas de intercambio descentralizadas, **de manera que cualquier persona**, aunque no tenga relación directa con la DAO, **puede adquirir tokens** de la ngDAO (en cantidades poco relevantes) **dando una cotización al token** y por tanto un valor **y una liquidez** que puede ayudar a los propios beneficiarios o cualquier otro poseedor del token.
   
-## Entramado de ngDAOs
+<h2>Entramado de ngDAOs</h2>
 
   Gracias a la tokenización, ngDAO pretende ser **un entramado de ngDAOs que puedan apoyarse unas a otras** por el efecto red y compartiendo tokens de manera que puedan participar en votaciones o beneficiarse del valor de los fondos o los tokens de otras ngDAOs.
   ![Entramado de ngDAOs](/assets/images/Esquema ngDAOs.png)
