--- a/index.html
+++ b/index.html
@@ -16,30 +16,38 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 
 <h2>Corrupción CERO</h2>
 
-* **La transparencia es** siempre **el mejor antídoto contra la corrupción**, y una ngDAO es 100% transparente.
-* **Los bienes** de una ngDAO **son inconfiscables** por ningún estado o gobierno.
-* **Los bienes** de una ngDAO **no pueden ser sustraidos.**
-* **No hay intermediarios** entre el donante -> ngDAO -> beneficiario.
-* **Los estatutos de una ngDAO** (un contrato inteligente en una Blockchain) **son transparentes e inamobibles** de por vida.
+<ul>
+ <li>**La transparencia es** siempre **el mejor antídoto contra la corrupción**, y una ngDAO es 100% transparente.</li>
+<li>**Los bienes** de una ngDAO **son inconfiscables** por ningún estado o gobierno.</li>
+<li>**Los bienes** de una ngDAO **no pueden ser sustraidos.**</li>
+<li>**No hay intermediarios** entre el donante -> ngDAO -> beneficiario.</li>
+<li>**Los estatutos de una ngDAO** (un contrato inteligente en una Blockchain) **son transparentes e inamobibles** de por vida.</li>
+</ul>
 
 <h2>Gestión democrática</h2>
 
-* **Ningún fondo es transferido sin haber pasado una votación previa.**
-* **El token** (participaciones) **de la ngDAO hace de token de gobernanza** y otorga poder de voto.
-
-<h3>Promotores/h3>
+<ul>
+ <li>**Ningún fondo es transferido sin haber pasado una votación previa.**</li>
+<li>**El token** (participaciones) **de la ngDAO hace de token de gobernanza** y otorga poder de voto.</li>
+ </ul>
+ 
+<h3>Promotores</h3>
 
 **Los promotores de la ngDAO son los primeros en obtener tokens** de gobernanza que poco a poco se irán diluyendo entre los tokens de los donantes y los de los beneficiarios
 
-<h3>Donantes/h3>
+<h3>Donantes</h3>
 
-* **Los donantes tienen derecho a tokens** de la ngDAO y por tanto a decidir que se hace con los fondos de la ngDAO.
-* **Cada ngDAO decide** entre sus miembros **como repartir nuevos tokens** entre los donantes de fondos.
+<ul>
+ <li>**Los donantes tienen derecho a tokens** de la ngDAO y por tanto a decidir que se hace con los fondos de la ngDAO.</li>
+<li>**Cada ngDAO decide** entre sus miembros **como repartir nuevos tokens** entre los donantes de fondos.</li>
+ </ul>
+ 
+<h3>Beneficiarios</h3>
 
-<h3>Beneficiarios/h3>
-
-* **Los beneficiarios reciben tokens en función** de la decisión de donantes y promotores, pero la idea es que cuando estos consideren que los beneficiarios han adquirido conocimientos para la gestión de la ngDAO y comprenden la economía del token, la masa de tokens en manos de beneficiarios sea superior al 51% de la que poseen promotores y donantes hasta que esta última pase a ser anecdótica.
-
+<ul>
+ <li>**Los beneficiarios reciben tokens en función** de la decisión de donantes y promotores, pero la idea es que cuando estos consideren que los beneficiarios han adquirido conocimientos para la gestión de la ngDAO y comprenden la economía del token, la masa de tokens en manos de beneficiarios sea superior al 51% de la que poseen promotores y donantes hasta que esta última pase a ser anecdótica.</li>
+ </ul>
+ 
 <h2>Ayudas directas sin intermediarios</h2>
 
 **Las ayudas llegan directamente a la ngDAO,** sin intermediarios y de forma íntegra.
@@ -48,7 +56,7 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 
 <h2>Economía DUAL y autónoma</h2>
 
-<h3>Fondos en criptomonedas/h3>
+<h3>Fondos en criptomoneda<s/h3>
   
   Al tratarse de un sistema basado en Blockchain, **los fondos se recaudan en criptomonedas.**
   
@@ -58,13 +66,17 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
   
 <h3>Economía del token</h3>
   
-  * Haya o no haya fondos suficientes para ayudar a los beneficiarios, **es posible crear** desde el prier día, **una economía basada en el token** que atesoran los beneficiarios y que la ngDAO les puede ir suminstrando hasta el día en que ellos dispongan de la mayoría de los tokens.
-  * Los tokens pueden crear **una economía basada en tokens de fidelización y** descuento y a medida que se genere confianza, **convertirse incluso en moneda local** si se diera el caso.
-  
+  <ul>
+   <li>Haya o no haya fondos suficientes para ayudar a los beneficiarios, **es posible crear** desde el prier día, **una economía basada en el token** que atesoran los beneficiarios y que la ngDAO les puede ir suminstrando hasta el día en que ellos dispongan de la mayoría de los tokens.</li>
+  <li>Los tokens pueden crear **una economía basada en tokens de fidelización y** descuento y a medida que se genere confianza, **convertirse incluso en moneda local** si se diera el caso.</li>
+ </ul>
+   
 #### Liquidez del token
   
-  * **El token puede formar parte fácilmente de pools de liquidez** en casas de intercambio descentralizadas, **de manera que cualquier persona**, aunque no tenga relación directa con la DAO, **puede adquirir tokens** de la ngDAO (en cantidades poco relevantes) **dando una cotización al token** y por tanto un valor **y una liquidez** que puede ayudar a los propios beneficiarios o cualquier otro poseedor del token.
-  
+  <ul>
+   <li>**El token puede formar parte fácilmente de pools de liquidez** en casas de intercambio descentralizadas, **de manera que cualquier persona**, aunque no tenga relación directa con la DAO, **puede adquirir tokens** de la ngDAO (en cantidades poco relevantes) **dando una cotización al token** y por tanto un valor **y una liquidez** que puede ayudar a los propios beneficiarios o cualquier otro poseedor del token.</li>
+   </ul> 
+   
 <h2>Entramado de ngDAOs</h2>
 
   Gracias a la tokenización, ngDAO pretende ser **un entramado de ngDAOs que puedan apoyarse unas a otras** por el efecto red y compartiendo tokens de manera que puedan participar en votaciones o beneficiarse del valor de los fondos o los tokens de otras ngDAOs.
