--- a/index.html
+++ b/index.html
@@ -12,87 +12,89 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 
 <h2>100% Transparente</h2>
 
-**Cualquier persona**, de dentro y fuera de la ngDAO, **puede saber cuantos fondos tiene la DAO y como los distribuye.**
+<b>Cualquier persona</b>, de dentro y fuera de la ngDAO, <b>puede saber cuantos fondos tiene la DAO y como los distribuye.</b>
 
 <h2>Corrupción CERO</h2>
 
 <ul>
- <li>**La transparencia es** siempre **el mejor antídoto contra la corrupción**, y una ngDAO es 100% transparente.</li>
-<li>**Los bienes** de una ngDAO **son inconfiscables** por ningún estado o gobierno.</li>
-<li>**Los bienes** de una ngDAO **no pueden ser sustraidos.**</li>
-<li>**No hay intermediarios** entre el donante -> ngDAO -> beneficiario.</li>
-<li>**Los estatutos de una ngDAO** (un contrato inteligente en una Blockchain) **son transparentes e inamobibles** de por vida.</li>
+ <li><b>La transparencia es</b> siempre <b>el mejor antídoto contra la corrupción</b>, y una ngDAO es 100% transparente.</li>
+<li><b>Los bienes</b> de una ngDAO <b>son inconfiscables</b> por ningún estado o gobierno.</li>
+<li><b>Los bienes</b> de una ngDAO <b>no pueden ser sustraidos.</b></li>
+<li><b>No hay intermediarios</b> entre el donante -> ngDAO -> beneficiario.</li>
+<li><b>Los estatutos de una ngDAO</b> (un contrato inteligente en una Blockchain) <b>son transparentes e inamobibles</b> de por vida.</li>
 </ul>
 
 <h2>Gestión democrática</h2>
 
 <ul>
- <li>**Ningún fondo es transferido sin haber pasado una votación previa.**</li>
-<li>**El token** (participaciones) **de la ngDAO hace de token de gobernanza** y otorga poder de voto.</li>
+ <li><b>Ningún fondo es transferido sin haber pasado una votación previa.</b></li>
+<li><b>El token</b> (participaciones) <b>de la ngDAO hace de token de gobernanza</b> y otorga poder de voto.</li>
  </ul>
  
 <h3>Promotores</h3>
 
-**Los promotores de la ngDAO son los primeros en obtener tokens** de gobernanza que poco a poco se irán diluyendo entre los tokens de los donantes y los de los beneficiarios
+<b>Los promotores de la ngDAO son los primeros en obtener tokens</b> de gobernanza que poco a poco se irán diluyendo entre los tokens de los donantes y los de los beneficiarios
 
 <h3>Donantes</h3>
 
 <ul>
- <li>**Los donantes tienen derecho a tokens** de la ngDAO y por tanto a decidir que se hace con los fondos de la ngDAO.</li>
-<li>**Cada ngDAO decide** entre sus miembros **como repartir nuevos tokens** entre los donantes de fondos.</li>
+ <li><b>Los donantes tienen derecho a tokens</b> de la ngDAO y por tanto a decidir que se hace con los fondos de la ngDAO.</li>
+<li><b>Cada ngDAO decide</b> entre sus miembros <b>como repartir nuevos tokens</b> entre los donantes de fondos.</li>
  </ul>
  
 <h3>Beneficiarios</h3>
 
 <ul>
- <li>**Los beneficiarios reciben tokens en función** de la decisión de donantes y promotores, pero la idea es que cuando estos consideren que los beneficiarios han adquirido conocimientos para la gestión de la ngDAO y comprenden la economía del token, la masa de tokens en manos de beneficiarios sea superior al 51% de la que poseen promotores y donantes hasta que esta última pase a ser anecdótica.</li>
+ <li>**Los beneficiarios reciben tokens en función</b> de la decisión de donantes y promotores, pero la idea es que cuando estos consideren que los beneficiarios han adquirido conocimientos para la gestión de la ngDAO y comprenden la economía del token, la masa de tokens en manos de beneficiarios sea superior al 51% de la que poseen promotores y donantes hasta que esta última pase a ser anecdótica.</li>
  </ul>
  
 <h2>Ayudas directas sin intermediarios</h2>
 
-**Las ayudas llegan directamente a la ngDAO,** sin intermediarios y de forma íntegra.
+<b>Las ayudas llegan directamente a la ngDAO,</b> sin intermediarios y de forma íntegra.
 
- ![Cómo funciona una ngDAO](/assets/images/Como funciona una ngDAO.png)
+<img src="/assets/images/Como funciona una ngDAO.png" alt="Cómo funciona una ngDAO">
 
 <h2>Economía DUAL y autónoma</h2>
 
-<h3>Fondos en criptomoneda<s/h3>
+<h3>Fondos en criptomoneda</h3>
   
-  Al tratarse de un sistema basado en Blockchain, **los fondos se recaudan en criptomonedas.**
+  Al tratarse de un sistema basado en Blockchain, <b>los fondos se recaudan en criptomonedas.</b>
   
 #### Autogestión de los fondos
   
-  **Los propietarios de tokens de la ngDAO son los encargados de decidir dónde van destinados los fondos** de la ngDAO mediante votación democrática.
+  <b>Los propietarios de tokens de la ngDAO son los encargados de decidir dónde van destinados los fondos</b> de la ngDAO mediante votación democrática.
   
 <h3>Economía del token</h3>
   
-  <ul>
-   <li>Haya o no haya fondos suficientes para ayudar a los beneficiarios, **es posible crear** desde el prier día, **una economía basada en el token** que atesoran los beneficiarios y que la ngDAO les puede ir suminstrando hasta el día en que ellos dispongan de la mayoría de los tokens.</li>
-  <li>Los tokens pueden crear **una economía basada en tokens de fidelización y** descuento y a medida que se genere confianza, **convertirse incluso en moneda local** si se diera el caso.</li>
- </ul>
+<ul>
+ <li>Haya o no haya fondos suficientes para ayudar a los beneficiarios, <b>es posible crear</b> desde el prier día, <b>una economía basada en el token</b> que atesoran los beneficiarios y que la ngDAO les puede ir suminstrando hasta el día en que ellos dispongan de la mayoría de los tokens.</li>
+ <li>Los tokens pueden crear <b>una economía basada en tokens de fidelización y</b> descuento y a medida que se genere confianza, <b>convertirse incluso en moneda local</b> si se diera el caso.</li>
+</ul>
    
 #### Liquidez del token
   
   <ul>
-   <li>**El token puede formar parte fácilmente de pools de liquidez** en casas de intercambio descentralizadas, **de manera que cualquier persona**, aunque no tenga relación directa con la DAO, **puede adquirir tokens** de la ngDAO (en cantidades poco relevantes) **dando una cotización al token** y por tanto un valor **y una liquidez** que puede ayudar a los propios beneficiarios o cualquier otro poseedor del token.</li>
+   <li><b>El token puede formar parte fácilmente de pools de liquidez</b> en casas de intercambio descentralizadas, <b>de manera que cualquier persona</b>, aunque no tenga relación directa con la DAO, <b>puede adquirir tokens</b> de la ngDAO (en cantidades poco relevantes) <b>dando una cotización al token</b> y por tanto un valor **y una liquidez</b> que puede ayudar a los propios beneficiarios o cualquier otro poseedor del token.</li>
    </ul> 
    
 <h2>Entramado de ngDAOs</h2>
 
-  Gracias a la tokenización, ngDAO pretende ser **un entramado de ngDAOs que puedan apoyarse unas a otras** por el efecto red y compartiendo tokens de manera que puedan participar en votaciones o beneficiarse del valor de los fondos o los tokens de otras ngDAOs.
-  ![Entramado de ngDAOs](/assets/images/Esquema ngDAOs.png)
+  Gracias a la tokenización, ngDAO pretende ser <b>un entramado de ngDAOs que puedan apoyarse unas a otras</b> por el efecto red y compartiendo tokens de manera que puedan participar en votaciones o beneficiarse del valor de los fondos o los tokens de otras ngDAOs.
+  <img src="/assets/images/Esquema ngDAOs.png" alt="Entramado de ngDAOs">
 
---------------------
+<hr>
 
-**Url:** <https://www.ngdao.org>
+<b>Url:</b> <https://www.ngdao.org>
 
-* Formación
-* Consultoría
-* Marketing
+<ul>
+ <li>Formación</li>
+ <li>Consultoría</li>
+ <li>Marketing</li>
+</ul>
 
-**Wiki:** <https://github.com/NGDAOorg/ngdao/wiki>
+<b>Wiki:</b> <https://github.com/NGDAOorg/ngdao/wiki>
 
-## ¿Cómo ayudar?
+ </h2>¿Cómo ayudar?</h2>
 
 * Habla sobre nosotros y colabora con las DAOs que aparecen en el listado de ngDAOs
 * Entra en la sección colaborar para más información
