--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 
  </h2>¿Cómo ayudar?</h2>
 
-* Habla sobre nosotros y colabora con las DAOs que aparecen en el listado de ngDAOs
-* Entra en la sección colaborar para más información
-
+<ul>
+ <li>Habla sobre nosotros y colabora con las DAOs que aparecen en el listado de ngDAOs</li>
+ <li>Entra en la sección colaborar para más información</li>
+</ul>
