--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
   
   Al tratarse de un sistema basado en Blockchain, <b>los fondos se recaudan en criptomonedas.</b>
   
-#### Autogestión de los fondos
+<h3>Autogestión de los fondos</h3>
   
   <b>Los propietarios de tokens de la ngDAO son los encargados de decidir dónde van destinados los fondos</b> de la ngDAO mediante votación democrática.
   
@@ -71,7 +71,7 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
  <li>Los tokens pueden crear <b>una economía basada en tokens de fidelización y</b> descuento y a medida que se genere confianza, <b>convertirse incluso en moneda local</b> si se diera el caso.</li>
 </ul>
    
-#### Liquidez del token
+<h3>Liquidez del token</h3>
   
   <ul>
    <li><b>El token puede formar parte fácilmente de pools de liquidez</b> en casas de intercambio descentralizadas, <b>de manera que cualquier persona</b>, aunque no tenga relación directa con la DAO, <b>puede adquirir tokens</b> de la ngDAO (en cantidades poco relevantes) <b>dando una cotización al token</b> y por tanto un valor **y una liquidez</b> que puede ayudar a los propios beneficiarios o cualquier otro poseedor del token.</li>
