--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 <h3>Beneficiarios</h3>
 
 <ul>
- <li>**Los beneficiarios reciben tokens en función</b> de la decisión de donantes y promotores, pero la idea es que cuando estos consideren que los beneficiarios han adquirido conocimientos para la gestión de la ngDAO y comprenden la economía del token, la masa de tokens en manos de beneficiarios sea superior al 51% de la que poseen promotores y donantes hasta que esta última pase a ser anecdótica.</li>
+ <li><b>Los beneficiarios reciben tokens en función</b> de la decisión de donantes y promotores, pero la idea es que cuando estos consideren que los beneficiarios han adquirido conocimientos para la gestión de la ngDAO y comprenden la economía del token, la masa de tokens en manos de beneficiarios sea superior al 51% de la que poseen promotores y donantes hasta que esta última pase a ser anecdótica.</li>
  </ul>
  
 <h2>Ayudas directas sin intermediarios</h2>
@@ -75,28 +75,9 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
   
   <ul>
    <li><b>El token puede formar parte fácilmente de pools de liquidez</b> en casas de intercambio descentralizadas, <b>de manera que cualquier persona</b>, aunque no tenga relación directa con la DAO, <b>puede adquirir tokens</b> de la ngDAO (en cantidades poco relevantes) <b>dando una cotización al token</b> y por tanto un valor **y una liquidez</b> que puede ayudar a los propios beneficiarios o cualquier otro poseedor del token.</li>
-   </ul> 
+  </ul> 
    
 <h2>Entramado de ngDAOs</h2>
 
   Gracias a la tokenización, ngDAO pretende ser <b>un entramado de ngDAOs que puedan apoyarse unas a otras</b> por el efecto red y compartiendo tokens de manera que puedan participar en votaciones o beneficiarse del valor de los fondos o los tokens de otras ngDAOs.
   <img src="/assets/images/Esquema ngDAOs.png" alt="Entramado de ngDAOs">
-
-<hr>
-
-<b>Url:</b> <https://www.ngdao.org>
-
-<ul>
- <li>Formación</li>
- <li>Consultoría</li>
- <li>Marketing</li>
-</ul>
-
-<b>Wiki:</b> <https://github.com/NGDAOorg/ngdao/wiki>
-
- </h2>¿Cómo ayudar?</h2>
-
-<ul>
- <li>Habla sobre nosotros y colabora con las DAOs que aparecen en el listado de ngDAOs</li>
- <li>Entra en la sección colaborar para más información</li>
-</ul>
