--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 
 <hr>
 
-<h2>100% Transparente</h2>
+<div class="grid">
+ 
+<div class="g-col-6">
+ 
+ <h2>100% Transparente</h2>
 
 <b>Cualquier persona</b>, de dentro y fuera de la ngDAO, <b>puede saber cuantos fondos tiene la DAO y como los distribuye.</b>
+ 
+ </div>
 
-<h2>Corrupción CERO</h2>
+<div class="g-col-6">
+ 
+ <h2>Corrupción CERO</h2>
 
 <ul>
  <li><b>La transparencia es</b> siempre <b>el mejor antídoto contra la corrupción</b>, y una ngDAO es 100% transparente.</li>
@@ -23,15 +31,19 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 <li><b>No hay intermediarios</b> entre el donante -> ngDAO -> beneficiario.</li>
 <li><b>Los estatutos de una ngDAO</b> (un contrato inteligente en una Blockchain) <b>son transparentes e inamobibles</b> de por vida.</li>
 </ul>
+ 
+ </div>
 
-<h2>Gestión democrática</h2>
+<div class="g-col-6">
+ 
+ <h2>Gestión democrática</h2>
 
 <ul>
  <li><b>Ningún fondo es transferido sin haber pasado una votación previa.</b></li>
 <li><b>El token</b> (participaciones) <b>de la ngDAO hace de token de gobernanza</b> y otorga poder de voto.</li>
  </ul>
  
-<h3>Promotores</h3>
+ <h3>Promotores</h3>
 
 <b>Los promotores de la ngDAO son los primeros en obtener tokens</b> de gobernanza que poco a poco se irán diluyendo entre los tokens de los donantes y los de los beneficiarios
 
@@ -48,11 +60,19 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
  <li><b>Los beneficiarios reciben tokens en función</b> de la decisión de donantes y promotores, pero la idea es que cuando estos consideren que los beneficiarios han adquirido conocimientos para la gestión de la ngDAO y comprenden la economía del token, la masa de tokens en manos de beneficiarios sea superior al 51% de la que poseen promotores y donantes hasta que esta última pase a ser anecdótica.</li>
  </ul>
  
+ </div>
+ 
+ <div class="g-col-6">
+  
 <h2>Ayudas directas sin intermediarios</h2>
 
 <b>Las ayudas llegan directamente a la ngDAO,</b> sin intermediarios y de forma íntegra.
 
 <img src="/assets/images/Como funciona una ngDAO.png" alt="Cómo funciona una ngDAO">
+  
+ </div>
+ 
+ <div class="g-col-6">
 
 <h2>Economía DUAL y autónoma</h2>
 
@@ -76,8 +96,16 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
   <ul>
    <li><b>El token puede formar parte fácilmente de pools de liquidez</b> en casas de intercambio descentralizadas, <b>de manera que cualquier persona</b>, aunque no tenga relación directa con la DAO, <b>puede adquirir tokens</b> de la ngDAO (en cantidades poco relevantes) <b>dando una cotización al token</b> y por tanto un valor **y una liquidez</b> que puede ayudar a los propios beneficiarios o cualquier otro poseedor del token.</li>
   </ul> 
-   
+  
+</div>
+
+<div class="g-col-6">
+ 
 <h2>Entramado de ngDAOs</h2>
 
   Gracias a la tokenización, ngDAO pretende ser <b>un entramado de ngDAOs que puedan apoyarse unas a otras</b> por el efecto red y compartiendo tokens de manera que puedan participar en votaciones o beneficiarse del valor de los fondos o los tokens de otras ngDAOs.
   <img src="/assets/images/Esquema ngDAOs.png" alt="Entramado de ngDAOs">
+
+</div>
+
+</div>
