--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 
 <b>Las ayudas llegan directamente a la ngDAO,</b> sin intermediarios y de forma íntegra.
 
-<img src="/assets/images/Como funciona una ngDAO.png" alt="Cómo funciona una ngDAO">
+<img src="/assets/images/Como funciona una ngDAO.png" class="img-fluid" alt="Cómo funciona una ngDAO">
   
  </div>
  
@@ -104,7 +104,7 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 <h2>Entramado de ngDAOs</h2>
 
   Gracias a la tokenización, ngDAO pretende ser <b>un entramado de ngDAOs que puedan apoyarse unas a otras</b> por el efecto red y compartiendo tokens de manera que puedan participar en votaciones o beneficiarse del valor de los fondos o los tokens de otras ngDAOs.
-  <img src="/assets/images/Esquema ngDAOs.png" alt="Entramado de ngDAOs">
+  <img src="/assets/images/Esquema ngDAOs.png" class="img-fluid" alt="Entramado de ngDAOs">
 
 </div>
 
