--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 
 <hr>
 
-<div class="grid">
+<div class="grid" style="--bs-columns: 12;">
  
 <div class="g-col-6">
  
