--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 <hr>
 
 <div class="grid" style="--bs-columns: 12;">
+ <div class="g-col-6">Col1</div>
+  <div class="g-col-6">Col2</div>
+   <div class="g-col-6">Col3</div>
+    <div class="g-col-6">Col4</div>
+     <div class="g-col-6">Col5</div>
+      <div class="g-col-6">Col6</div>
+</div>
+<div class="grid" style="--bs-columns: 12;">
  
 <div class="g-col-6">
  
