--- a/index.html
+++ b/index.html
@@ -18,102 +18,116 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
      <div class="g-col-6">Col5</div>
       <div class="g-col-6">Col6</div>
 </div>
-<div class="grid" style="--bs-columns: 12;">
+
+<div class="container">
  
-<div class="g-col-6">
- 
- <h2>100% Transparente</h2>
+ <div class="row align-items-start">
 
-<b>Cualquier persona</b>, de dentro y fuera de la ngDAO, <b>puede saber cuantos fondos tiene la DAO y como los distribuye.</b>
- 
- </div>
+  <div class="col">
 
-<div class="g-col-6">
- 
- <h2>Corrupción CERO</h2>
+   <h2>100% Transparente</h2>
 
-<ul>
- <li><b>La transparencia es</b> siempre <b>el mejor antídoto contra la corrupción</b>, y una ngDAO es 100% transparente.</li>
-<li><b>Los bienes</b> de una ngDAO <b>son inconfiscables</b> por ningún estado o gobierno.</li>
-<li><b>Los bienes</b> de una ngDAO <b>no pueden ser sustraidos.</b></li>
-<li><b>No hay intermediarios</b> entre el donante -> ngDAO -> beneficiario.</li>
-<li><b>Los estatutos de una ngDAO</b> (un contrato inteligente en una Blockchain) <b>son transparentes e inamobibles</b> de por vida.</li>
-</ul>
- 
- </div>
+  <b>Cualquier persona</b>, de dentro y fuera de la ngDAO, <b>puede saber cuantos fondos tiene la DAO y como los distribuye.</b>
 
-<div class="g-col-6">
- 
- <h2>Gestión democrática</h2>
+   </div>
 
-<ul>
- <li><b>Ningún fondo es transferido sin haber pasado una votación previa.</b></li>
-<li><b>El token</b> (participaciones) <b>de la ngDAO hace de token de gobernanza</b> y otorga poder de voto.</li>
- </ul>
- 
- <h3>Promotores</h3>
+  <div class="col">
 
-<b>Los promotores de la ngDAO son los primeros en obtener tokens</b> de gobernanza que poco a poco se irán diluyendo entre los tokens de los donantes y los de los beneficiarios
+    <h2>Corrupción CERO</h2>
 
-<h3>Donantes</h3>
+   <ul>
+    <li><b>La transparencia es</b> siempre <b>el mejor antídoto contra la corrupción</b>, y una ngDAO es 100% transparente.</li>
+   <li><b>Los bienes</b> de una ngDAO <b>son inconfiscables</b> por ningún estado o gobierno.</li>
+   <li><b>Los bienes</b> de una ngDAO <b>no pueden ser sustraidos.</b></li>
+   <li><b>No hay intermediarios</b> entre el donante -> ngDAO -> beneficiario.</li>
+   <li><b>Los estatutos de una ngDAO</b> (un contrato inteligente en una Blockchain) <b>son transparentes e inamobibles</b> de por vida.</li>
+   </ul>
 
-<ul>
- <li><b>Los donantes tienen derecho a tokens</b> de la ngDAO y por tanto a decidir que se hace con los fondos de la ngDAO.</li>
-<li><b>Cada ngDAO decide</b> entre sus miembros <b>como repartir nuevos tokens</b> entre los donantes de fondos.</li>
- </ul>
- 
-<h3>Beneficiarios</h3>
+   </div>
 
-<ul>
- <li><b>Los beneficiarios reciben tokens en función</b> de la decisión de donantes y promotores, pero la idea es que cuando estos consideren que los beneficiarios han adquirido conocimientos para la gestión de la ngDAO y comprenden la economía del token, la masa de tokens en manos de beneficiarios sea superior al 51% de la que poseen promotores y donantes hasta que esta última pase a ser anecdótica.</li>
- </ul>
- 
- </div>
- 
- <div class="g-col-6">
-  
-<h2>Ayudas directas sin intermediarios</h2>
+  </div>
 
-<b>Las ayudas llegan directamente a la ngDAO,</b> sin intermediarios y de forma íntegra.
+  <div class="row align-items-start">
 
-<img src="/assets/images/Como funciona una ngDAO.png" class="img-fluid" alt="Cómo funciona una ngDAO">
-  
- </div>
- 
- <div class="g-col-6">
+    <div class="col">
 
-<h2>Economía DUAL y autónoma</h2>
+  <h2>Gestión democrática</h2>
 
-<h3>Fondos en criptomoneda</h3>
-  
-  Al tratarse de un sistema basado en Blockchain, <b>los fondos se recaudan en criptomonedas.</b>
-  
-<h3>Autogestión de los fondos</h3>
-  
-  <b>Los propietarios de tokens de la ngDAO son los encargados de decidir dónde van destinados los fondos</b> de la ngDAO mediante votación democrática.
-  
-<h3>Economía del token</h3>
-  
-<ul>
- <li>Haya o no haya fondos suficientes para ayudar a los beneficiarios, <b>es posible crear</b> desde el prier día, <b>una economía basada en el token</b> que atesoran los beneficiarios y que la ngDAO les puede ir suminstrando hasta el día en que ellos dispongan de la mayoría de los tokens.</li>
- <li>Los tokens pueden crear <b>una economía basada en tokens de fidelización y</b> descuento y a medida que se genere confianza, <b>convertirse incluso en moneda local</b> si se diera el caso.</li>
-</ul>
+ <ul>
+  <li><b>Ningún fondo es transferido sin haber pasado una votación previa.</b></li>
+ <li><b>El token</b> (participaciones) <b>de la ngDAO hace de token de gobernanza</b> y otorga poder de voto.</li>
+  </ul>
+
+  <h3>Promotores</h3>
+
+ <b>Los promotores de la ngDAO son los primeros en obtener tokens</b> de gobernanza que poco a poco se irán diluyendo entre los tokens de los donantes y los de los beneficiarios
+
+ <h3>Donantes</h3>
+
+ <ul>
+  <li><b>Los donantes tienen derecho a tokens</b> de la ngDAO y por tanto a decidir que se hace con los fondos de la ngDAO.</li>
+ <li><b>Cada ngDAO decide</b> entre sus miembros <b>como repartir nuevos tokens</b> entre los donantes de fondos.</li>
+  </ul>
+
+ <h3>Beneficiarios</h3>
+
+ <ul>
+  <li><b>Los beneficiarios reciben tokens en función</b> de la decisión de donantes y promotores, pero la idea es que cuando estos consideren que los beneficiarios han adquirido conocimientos para la gestión de la ngDAO y comprenden la economía del token, la masa de tokens en manos de beneficiarios sea superior al 51% de la que poseen promotores y donantes hasta que esta última pase a ser anecdótica.</li>
+  </ul>
+
+  </div>
+
+  <div class="col">
+
+ <h2>Ayudas directas sin intermediarios</h2>
+
+ <b>Las ayudas llegan directamente a la ngDAO,</b> sin intermediarios y de forma íntegra.
+
+ <img src="/assets/images/Como funciona una ngDAO.png" class="img-fluid" alt="Cómo funciona una ngDAO">
+
+  </div>
    
-<h3>Liquidez del token</h3>
-  
-  <ul>
-   <li><b>El token puede formar parte fácilmente de pools de liquidez</b> en casas de intercambio descentralizadas, <b>de manera que cualquier persona</b>, aunque no tenga relación directa con la DAO, <b>puede adquirir tokens</b> de la ngDAO (en cantidades poco relevantes) <b>dando una cotización al token</b> y por tanto un valor **y una liquidez</b> que puede ayudar a los propios beneficiarios o cualquier otro poseedor del token.</li>
-  </ul> 
-  
-</div>
+ </div>
 
-<div class="g-col-6">
- 
-<h2>Entramado de ngDAOs</h2>
+  <div class="row align-items-start">
 
-  Gracias a la tokenización, ngDAO pretende ser <b>un entramado de ngDAOs que puedan apoyarse unas a otras</b> por el efecto red y compartiendo tokens de manera que puedan participar en votaciones o beneficiarse del valor de los fondos o los tokens de otras ngDAOs.
-  <img src="/assets/images/Esquema ngDAOs.png" class="img-fluid" alt="Entramado de ngDAOs">
+   <div class="col">
 
-</div>
+ <h2>Economía DUAL y autónoma</h2>
+
+ <h3>Fondos en criptomoneda</h3>
+
+   Al tratarse de un sistema basado en Blockchain, <b>los fondos se recaudan en criptomonedas.</b>
+
+ <h3>Autogestión de los fondos</h3>
+
+   <b>Los propietarios de tokens de la ngDAO son los encargados de decidir dónde van destinados los fondos</b> de la ngDAO mediante votación democrática.
+
+ <h3>Economía del token</h3>
+
+ <ul>
+  <li>Haya o no haya fondos suficientes para ayudar a los beneficiarios, <b>es posible crear</b> desde el prier día, <b>una economía basada en el token</b> que atesoran los beneficiarios y que la ngDAO les puede ir suminstrando hasta el día en que ellos dispongan de la mayoría de los tokens.</li>
+  <li>Los tokens pueden crear <b>una economía basada en tokens de fidelización y</b> descuento y a medida que se genere confianza, <b>convertirse incluso en moneda local</b> si se diera el caso.</li>
+ </ul>
+
+ <h3>Liquidez del token</h3>
+
+   <ul>
+    <li><b>El token puede formar parte fácilmente de pools de liquidez</b> en casas de intercambio descentralizadas, <b>de manera que cualquier persona</b>, aunque no tenga relación directa con la DAO, <b>puede adquirir tokens</b> de la ngDAO (en cantidades poco relevantes) <b>dando una cotización al token</b> y por tanto un valor **y una liquidez</b> que puede ayudar a los propios beneficiarios o cualquier otro poseedor del token.</li>
+   </ul> 
+
+ </div>
+
+ <div class="col">
+
+ <h2>Entramado de ngDAOs</h2>
+
+   Gracias a la tokenización, ngDAO pretende ser <b>un entramado de ngDAOs que puedan apoyarse unas a otras</b> por el efecto red y compartiendo tokens de manera que puedan participar en votaciones o beneficiarse del valor de los fondos o los tokens de otras ngDAOs.
+   <img src="/assets/images/Esquema ngDAOs.png" class="img-fluid" alt="Entramado de ngDAOs">
+
+ </div>
+ </div>
+
+ </div>
 
 </div>
