--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 <hr>
 
 
-<div class="container">
+<div class="container-fluid">
   <div class="row align-items-start">
    <div class="col">
     <h2>100% Transparente</h2>
