--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 
 <div class="container-fluid">
   <div class="row align-items-start">
-   <div class="col">
+   <div class="col-sm-6">
     <h2>100% Transparente</h2>
     <b>Cualquier persona</b>, de dentro y fuera de la ngDAO, <b>puede saber cuantos fondos tiene la DAO y como los distribuye.</b>
    </div>
-   <div class="col">
+   <div class="col-sm-6">
      <h2>Corrupción CERO</h2>
      <ul>
       <li><b>La transparencia es</b> siempre <b>el mejor antídoto contra la corrupción</b>, y una ngDAO es 100% transparente.</li>
@@ -29,7 +29,7 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
     </div>
    </div>
    <div class="row align-items-start">
-     <div class="col">
+     <div class="col-sm">
       <h2>Gestión democrática</h2>
       <ul>
        <li><b>Ningún fondo es transferido sin haber pasado una votación previa.</b></li>
@@ -47,14 +47,14 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
        <li><b>Los beneficiarios reciben tokens en función</b> de la decisión de donantes y promotores, pero la idea es que cuando estos consideren que los beneficiarios han adquirido conocimientos para la gestión de la ngDAO y comprenden la economía del token, la masa de tokens en manos de beneficiarios sea superior al 51% de la que poseen promotores y donantes hasta que esta última pase a ser anecdótica.</li>
       </ul>
      </div>
-     <div class="col">
+     <div class="col-sm">
       <h2>Ayudas directas sin intermediarios</h2>
       <b>Las ayudas llegan directamente a la ngDAO,</b> sin intermediarios y de forma íntegra.
       <img src="/assets/images/Como funciona una ngDAO.png" class="img-fluid" alt="Cómo funciona una ngDAO">
      </div>
    </div>
    <div class="row align-items-start">
-    <div class="col">
+    <div class="col-sm-6">
      <h2>Economía DUAL y autónoma</h2>
      <h3>Fondos en criptomoneda</h3>
      Al tratarse de un sistema basado en Blockchain, <b>los fondos se recaudan en criptomonedas.</b>
@@ -70,7 +70,7 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
       <li><b>El token puede formar parte fácilmente de pools de liquidez</b> en casas de intercambio descentralizadas, <b>de manera que cualquier persona</b>, aunque no tenga relación directa con la DAO, <b>puede adquirir tokens</b> de la ngDAO (en cantidades poco relevantes) <b>dando una cotización al token</b> y por tanto un valor **y una liquidez</b> que puede ayudar a los propios beneficiarios o cualquier otro poseedor del token.</li>
      </ul> 
     </div>
-    <div class="col">
+    <div class="col-sm-6">
      <h2>Entramado de ngDAOs</h2>
      Gracias a la tokenización, ngDAO pretende ser <b>un entramado de ngDAOs que puedan apoyarse unas a otras</b> por el efecto red y compartiendo tokens de manera que puedan participar en votaciones o beneficiarse del valor de los fondos o los tokens de otras ngDAOs.
      <img src="/assets/images/Esquema ngDAOs.png" class="img-fluid" alt="Entramado de ngDAOs">
