--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
 <div class="container-fluid">
   <div class="row align-items-start">
    <div class="col-sm-6">
-    <h2>100% Transparente</h2>
+    <div class="p-3 mb-2 bg-info text-white">
+      <h2>100% Transparente</h2>
+     </div>
     <b>Cualquier persona</b>, de dentro y fuera de la ngDAO, <b>puede saber cuantos fondos tiene la DAO y como los distribuye.</b>
    </div>
    <div class="col-sm-6">
-     <h2>Corrupción CERO</h2>
+     <div class="p-3 mb-2 bg-info text-white">
+      <h2>Corrupción CERO</h2>
+     </div>
      <ul>
       <li><b>La transparencia es</b> siempre <b>el mejor antídoto contra la corrupción</b>, y una ngDAO es 100% transparente.</li>
       <li><b>Los bienes</b> de una ngDAO <b>son inconfiscables</b> por ningún estado o gobierno.</li>
@@ -30,7 +34,9 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
    </div>
    <div class="row align-items-start">
      <div class="col-sm">
-      <h2>Gestión democrática</h2>
+      <div class="p-3 mb-2 bg-info text-white">
+        <h2>Gestión democrática</h2>
+       </div>
       <ul>
        <li><b>Ningún fondo es transferido sin haber pasado una votación previa.</b></li>
        <li><b>El token</b> (participaciones) <b>de la ngDAO hace de token de gobernanza</b> y otorga poder de voto.</li>
@@ -55,7 +61,9 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
    </div>
    <div class="row align-items-start">
     <div class="col-sm-6">
-     <h2>Economía DUAL y autónoma</h2>
+     <div class="p-3 mb-2 bg-info text-white">
+        <h2>Economía DUAL y autónoma</h2>
+      </div>
      <h3>Fondos en criptomoneda</h3>
      Al tratarse de un sistema basado en Blockchain, <b>los fondos se recaudan en criptomonedas.</b>
      <h3>Autogestión de los fondos</h3>
@@ -71,7 +79,9 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
      </ul> 
     </div>
     <div class="col-sm-6">
-     <h2>Entramado de ngDAOs</h2>
+     <div class="p-3 mb-2 bg-info text-white">
+      <h2>Entramado de ngDAOs</h2>
+    </div>
      Gracias a la tokenización, ngDAO pretende ser <b>un entramado de ngDAOs que puedan apoyarse unas a otras</b> por el efecto red y compartiendo tokens de manera que puedan participar en votaciones o beneficiarse del valor de los fondos o los tokens de otras ngDAOs.
      <img src="/assets/images/Esquema ngDAOs.png" class="img-fluid" alt="Entramado de ngDAOs">
     </div>
