--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
       </ul>
      </div>
      <div class="col-sm">
+     <div class="p-3 mb-2 bg-info text-white">
       <h2>Ayudas directas sin intermediarios</h2>
+     </div>
       <b>Las ayudas llegan directamente a la ngDAO,</b> sin intermediarios y de forma íntegra.
       <img src="/assets/images/Como funciona una ngDAO.png" class="img-fluid" alt="Cómo funciona una ngDAO">
      </div>
