--- a/index.html
+++ b/index.html
@@ -41,15 +41,21 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
        <li><b>Ningún fondo es transferido sin haber pasado una votación previa.</b></li>
        <li><b>El token</b> (participaciones) <b>de la ngDAO hace de token de gobernanza</b> y otorga poder de voto.</li>
       </ul>
-      <h3>Promotores</h3>
+      <div class="p-3 mb-2 bg-secondary text-white">
+        <h3>Promotores</h3>
+       </div>
       <b>Los promotores de la ngDAO son los primeros en obtener tokens</b> de gobernanza que poco a poco se irán diluyendo entre los tokens de los donantes y los de los beneficiarios
-      <h3>Donantes</h3>
+      <div class="p-3 mb-2 bg-secondary text-white">
+        <h3>Donantes</h3>
+       </div>
       <ul>
        <li><b>Los donantes tienen derecho a tokens</b> de la ngDAO y por tanto a decidir que se hace con los fondos de la ngDAO.</li>
        <li><b>Cada ngDAO decide</b> entre sus miembros <b>como repartir nuevos tokens</b> entre los donantes de fondos.</li>
       </ul>
-      <h3>Beneficiarios</h3>
-      <ul>
+      <div class="p-3 mb-2 bg-secondary text-white">
+        <h3>Beneficiarios</h3>
+       </div>
+       <ul>
        <li><b>Los beneficiarios reciben tokens en función</b> de la decisión de donantes y promotores, pero la idea es que cuando estos consideren que los beneficiarios han adquirido conocimientos para la gestión de la ngDAO y comprenden la economía del token, la masa de tokens en manos de beneficiarios sea superior al 51% de la que poseen promotores y donantes hasta que esta última pase a ser anecdótica.</li>
       </ul>
      </div>
@@ -66,16 +72,24 @@ description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizad
      <div class="p-3 mb-2 bg-info text-white">
         <h2>Economía DUAL y autónoma</h2>
       </div>
-     <h3>Fondos en criptomoneda</h3>
+     <div class="p-3 mb-2 bg-secondary text-white">
+       <h3>Fondos en criptomoneda</h3>
+      </div>
      Al tratarse de un sistema basado en Blockchain, <b>los fondos se recaudan en criptomonedas.</b>
-     <h3>Autogestión de los fondos</h3>
+     <div class="p-3 mb-2 bg-secondary text-white">
+       <h3>Autogestión de los fondos</h3>
+      </div>
      <b>Los propietarios de tokens de la ngDAO son los encargados de decidir dónde van destinados los fondos</b> de la ngDAO mediante votación democrática.
-     <h3>Economía del token</h3>
+     <div class="p-3 mb-2 bg-secondary text-white">
+       <h3>Economía del token</h3>
+      </div>
      <ul>
       <li>Haya o no haya fondos suficientes para ayudar a los beneficiarios, <b>es posible crear</b> desde el prier día, <b>una economía basada en el token</b> que atesoran los beneficiarios y que la ngDAO les puede ir suminstrando hasta el día en que ellos dispongan de la mayoría de los tokens.</li>
       <li>Los tokens pueden crear <b>una economía basada en tokens de fidelización y</b> descuento y a medida que se genere confianza, <b>convertirse incluso en moneda local</b> si se diera el caso.</li>
      </ul>
-     <h3>Liquidez del token</h3>
+     <div class="p-3 mb-2 bg-secondary text-white">
+       <h3>Liquidez del token</h3>
+      </div>
      <ul>
       <li><b>El token puede formar parte fácilmente de pools de liquidez</b> en casas de intercambio descentralizadas, <b>de manera que cualquier persona</b>, aunque no tenga relación directa con la DAO, <b>puede adquirir tokens</b> de la ngDAO (en cantidades poco relevantes) <b>dando una cotización al token</b> y por tanto un valor **y una liquidez</b> que puede ayudar a los propios beneficiarios o cualquier otro poseedor del token.</li>
      </ul> 
