--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@ layout: default
 title: ngDAO
 description: DAO de apoyo a otras DAOs (Organizaciones Autónomas Descentralizadas) sin ánimo de lucro o ngDAOs
 ---
-
-<h4>Porque otra forma de gestionar fondos y hacer llegar las ayudas a gente necesitada es posible</h4>
-<h4>Todo gracias a las Organizaciones Autónomas Descentralizadas y la Blockchain</h4>
-<h4>El término ngDAO viene de "non-governmental Decentalized Autonomous Organization" a diferencia del término NGO "Non-Governmental Organization"</h4>
-
-<hr>
-
+<div class="p-3 mb-2 bg-dark text-white">
+  <h4>Porque otra forma de gestionar fondos y hacer llegar las ayudas a gente necesitada es posible</h4>
+  <h4>Todo gracias a las Organizaciones Autónomas Descentralizadas y la Blockchain</h4>
+  <h4>El término ngDAO viene de "non-governmental Decentalized Autonomous Organization" a diferencia del término NGO "Non-Governmental Organization"</h4>
+</div>
 
 <div class="container-fluid">
   <div class="row align-items-start">
